src/test/deca/syntax/valid/parser/oracle/inst_third_deriv.deca
{
  print();
  print("Hello World !");
  print(1 + 2.0);
  print(1.0 / "Hello World !");
  print(true && false);
  print(null);
  print("Hello World !", "Hello Moon !");
  print(1.0, true);
  print(false, false);
  print(this, this);
  print("Hello World !", 2.0);
}
