src/test/deca/syntax/invalid/parser/oracle/else_with_one_missing_brackets.deca
{
    if(true){}else if(true){print(1);}else{;
}